#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file for add models directories
#*
add_subdirectory(conveyor)
add_subdirectory(fifo_example)
add_subdirectory(pipe_example)